--- a/index.html
+++ b/index.html
@@ -33,6 +33,12 @@
         result = "autre";
       }
       console.log(result);
+
+      var a;
+      for (a = 0; a < 10; a++) {
+        console.log(a);
+      }
+
     </script>
   </body>
 </html>
